# QmlPlayer

./: CMakeLists.txt  LICENSE  README.md  resources.qrc
src/: main.cpp
src/core/: AVDemuxer.cpp  AVDemuxer.h  AudioDecoder.cpp  AudioDecoder.h  AudioOutput.cpp  AudioOutput.h  ConfigBridge.cpp  ConfigBridge.h  ConfigManager.cpp  ConfigManager.h  ThreadSafeQueue.h  Utils.h  VideoDecoder.cpp  VideoDecoder.h  VideoRenderer.cpp  VideoRenderer.h
src/resources/qml/: ControlPanel.qml  PlaybackProgressBar.qml  PlayerButton.qml  UrlInputDialog.qml  main.qml
src/resources/shaders/: fragment.frag
